deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx
  labels:
    first: app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: web

  template:
    metadata:
      labels:
        app: web

    spec:
      containers:
        - name: nginx-container
          image: nginx
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service

metadata:
  name: myservice

spec:
  type: ClusterIP

  selector:
    app: web

  ports:
    - protocol: TCP
      port: 82
      targetPort: 80
