gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: ghee-gateway
  namespace:ghee-ns

spec:
  gatewayClassName: nginx

  listeners:
    - name: http
      protocol: HTTP
      port: 80
