httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: ghee-route
  namespace: ghee-ns

spec:
  parentRefs:
    - name: ghee-gateway

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ghee
      
      filters:
        type: URL rewrite
        URL Rewrite:
          path:
            type: ReplacePrefixMatch
            ReplacePrefixMatch: /ghee

      backendRefs:
        - name: ghee-service
          port: 5656
